<resources>
    <string name="app_name">茂名职业技术学院App</string>
    <string name="et_name">请输入学号</string>
    <string name="et_password">请输入密码</string>
    <string name="et_vertify">验证码</string>
    <string name="btn_login">登 陆</string>
    <string name="xueqi">学期</string>
    <string name="className">课程名称</string>
    <string name="score">成绩</string>
    <string name="me">我</string>
    <string name="isSave">保存账号密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="rule_text">0123456789abcdefghijklmnopqrstuvwxyz
ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="num_text">0123456789abcdefghijklmnopqrstuvwxyz
ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="school_overview">学院简介</string>
    <string name="school_leader">学校领导</string>
    <string name="leader_function">班子分工</string>
    <string name="school_history">历史沿革</string>
    <string name="school_scenery">校园风光</string>
    <string name="school_logo">VI视觉识别系统</string>
</resources>
